# abi-forge

./: .gitignore  ARCHITECTURE.md  README.md  abi_framework.py  action.yml  appveyor.yml  pyproject.toml
.github/workflows/: publish-nuget.yml  publish-pypi.yml  publish.yml
abi_codegen_core/: README.md
abi_codegen_core/tests/: test_native_exports.py  test_required_functions.py
abi_roslyn_codegen/: Abi.RoslynGenerator.csproj  AbiInteropGenerator.cs  AbiInteropSourceEmitter.cs  AbiInteropTypesSourceEmitter.cs  AnalyzerReleases.Unshipped.md  ManagedApiSourceEmitter.cs  README.md
examples/: README.md
generator_sdk/: README.md  __init__.py  external_generator_stub.py  go_bindings_generator.py  layout_probe_generator.py  managed_api_codegen.py  managed_api_metadata_generator.py  managed_api_scaffold_generator.py  managed_bindings_scaffold_generator.py  native_exports_generator.py  native_impl_handles_generator.py  plugin.manifest.json  python_bindings_generator.py  rust_ffi_generator.py  symbol_contract_generator.py  typescript_bindings_generator.py
generator_sdk/csharp/: Abi.RoslynGenerator.csproj  AbiInteropGenerator.cs  AbiInteropSourceEmitter.cs  AbiTypeConstants.cs  ManagedApiSourceEmitter.cs  README.md
generators/: lumenrtc_csharp_handles.py  lumenrtc_csharp_interop.py  lumenrtc_native_exports.py
schemas/: config.schema.json  idl.schema.v1.json  idl.schema.v2.json  report.schema.json  snapshot.schema.json
src/abi_framework_core/: __init__.py  _core_base.py  _core_codegen.py  _core_compare.py  _core_orchestration.py  _core_plugins.py  _core_policy.py  _core_snapshot.py  cli.py  commands.py  (+1 more)
tests/: test_abi_framework.py  test_lumenrtc_interop_metadata.py  test_lumenrtc_managed_metadata.py  test_plugin_manifest.py
(+26 files in other folders)
